[package]
name = "starch"
version = "0.2.0"
edition = "2024"
description = "CLI utility for the Steam version of RetroArch"
authors = ["Benjamin Dengler <h@bede.re>"]
repository = "https://github.com/ekx/starch"
license = "MIT"
keywords = ["retroarch", "steam"]
categories = ["command-line-utilities"]
exclude = [".idea/*", ".vscode/*", ".github/*"]

[dependencies]
steamlocate = "2.0.1"
rust-ini = "0.21.2"
reqwest = { version = "0.12.22", features = ["stream"] }
tokio = { version = "1.46.1", features = ["rt", "rt-multi-thread", "macros"] }
sevenz-rust = "0.6.1"
indicatif = "0.18.0"
futures-util = "0.3.31"
anyhow = "1.0.98"
zip = "4.3.0"
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tempfile = "3.20.0"
