[package]
name = "starch"
version = "0.2.3"
edition = "2024"
description = "CLI utility for the Steam version of RetroArch"
authors = ["Benjamin Dengler <h@bede.re>"]
repository = "https://github.com/ekx/starch"
license = "MIT"
keywords = ["retroarch", "steam"]
categories = ["command-line-utilities"]
exclude = [".idea/*", ".vscode/*", ".github/*"]

[dependencies]
steamlocate = "2.0.1"
rust-ini = "0.21.1"
reqwest = { version = "0.12.23", features = ["stream"] }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
sevenz-rust = "0.6.1"
indicatif = "0.18.0"
futures-util = "0.3.31"
anyhow = "1.0.99"
zip = "4.3.0"
clap = { version = "4.5.45", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tempfile = "3.20.0"
